--- a/app/views/admin/dashboard/users_manag.html.erb
+++ b/app/views/admin/dashboard/users_manag.html.erb
@@ -1,7 +1,7 @@
 <div class="container mb-5 mt-5">
+  <h1 class="title is-3 has-text-centered"><i class="fas fa-users"></i> Users Management</h1>
   <div data-controller="user-management">
     <div class="box bg-transparent has-text-white">
-      <h3 class="title is-5"><i class="fas fa-users"></i> Users Management</h3>
       <div class="field is-grouped mb-4">
         <div class="control">
           <div class="select is-small">
