--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -85,7 +85,7 @@
                     <span class="icon">
                       <i class="fas fa-tools"></i>
                     </span>
-                    <strong>account</strong>
+                    <strong>Account</strong>
                   </a>
                 <% end %>
                 <% if current_user.admin? %>
@@ -93,13 +93,19 @@
                     <span class="icon">
                       <i class="fas fa-user"></i>
                     </span>
-                    <strong>account</strong>
+                    <strong>Account</strong>
                   </a>
                   <a class="navbar-item" href="<%= admin_usermanagement_path %>">
                     <span class="icon">
                       <i class="fas fa-tools"></i>
                     </span>
                     <strong>Users Manage</strong>
+                  </a>
+                  <a class="navbar-item" href="<%= admin_mangamanagement_path %>">
+                    <span class="icon">
+                      <i class="fas fa-book"></i>
+                    </span>
+                    <strong>Manga Manage</strong>
                   </a>
                   <a class="navbar-item" href="<%= admin_reports_path %>">
                     <span class="icon">
