changed bg search and bookmarkrs if empty

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -159,7 +159,7 @@
       <div class="content has-text-centered">
         <p> &copy; <%= Time.now.year %> KitsuManga</p>
         <p>
-          <strong>Code</strong> by <a href="https://github.com/rokhimin">Rokhimin</a>.
+          <strong>Code</strong> by <a href="https://github.com/whdzera">whdzera</a>.
         </p>
       </div>
     </footer>
