stimulus - added username controller

--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -6,7 +6,7 @@
       <!-- Account Information Section -->
       <div class="dashboard-section">
         <div class="box bg-transparent has-text-white">
-          <div class="box bg-transparent">
+          <div class="box bg-full-transparent">
             <ul class="content">
               <li><strong>Username:</strong> <%= current_user.username %></li>
               <li><strong>Email:</strong> <%= current_user.email %></li>
