--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,13 +6,15 @@
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "box bg-transparent" }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
       <br>
-      <div class="field">
+      <div class="field" data-controller="username">
         <div class="control has-icons-left has-icons-right">
-          <%= f.text_field :username, autofocus: true, class: "input bg-full-transparent", placeholder: "Username" %>
+          <%= f.text_field :username, autofocus: true, class: "input bg-full-transparent", placeholder: "Username", 
+              data: { username_target: "input", action: "input->username#checkUsername" } %>
           <span class="icon is-small is-left">
             <i class="fas fa-user"></i>
           </span>
         </div>
+        <p data-username-target="message" class="is-size-7 mt-1 ml-2"></p>
       </div>
       <div class="field">
         <div class="control has-icons-left has-icons-right">
