--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,26 +24,33 @@
           </span>
         </div>
       </div>
-      <div class="field" data-controller="toggle-password">
-        <div class="control has-icons-left has-icons-right">
-          <%= f.password_field :password, autocomplete: "new-password", class: "input bg-full-transparent", placeholder: "Password", id: "password-field", data: { toggle_password_target: "password" } %>
-          <span class="icon is-small is-left">
-            <i class="fa fa-lock"></i>
-          </span>
-          <span class="icon is-small is-right" style="pointer-events: all; cursor: pointer" data-action="click->toggle-password#toggle">
-            <i class="fa fa-fw fa-eye" data-toggle-password-target="icon"></i>
-          </span>
+      <div data-controller="password-match">
+        <div class="field" data-controller="toggle-password">
+          <div class="control has-icons-left has-icons-right">
+            <%= f.password_field :password, autocomplete: "new-password", class: "input bg-full-transparent", placeholder: "Password", id: "password-field", data: { toggle_password_target: "password", 
+                        "password-match-target": "password", 
+                        "action": "input->password-match#check" } %>
+            <span class="icon is-small is-left">
+              <i class="fa fa-lock"></i>
+            </span>
+            <span class="icon is-small is-right" style="pointer-events: all; cursor: pointer" data-action="click->toggle-password#toggle">
+              <i class="fa fa-fw fa-eye" data-toggle-password-target="icon"></i>
+            </span>
+          </div>
+          <p data-password-match-target="message" class="is-size-7 has-text-danger ml-2 mt-1 is-hidden"></p>
         </div>
-      </div>
-      <div class="field" data-controller="toggle-password">
-        <div class="control has-icons-left has-icons-right">
-          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input bg-full-transparent", placeholder: "Password Confirmation", id: "password-confirmation-field", data: { toggle_password_target: "password" } %>
-          <span class="icon is-small is-left">
-            <i class="fa fa-lock"></i>
-          </span>
-          <span class="icon is-small is-right" style="pointer-events: all; cursor: pointer" data-action="click->toggle-password#toggle">
-            <i class="fa fa-fw fa-eye" data-toggle-password-target="icon"></i>
-          </span>
+        <div class="field" data-controller="toggle-password">
+          <div class="control has-icons-left has-icons-right">
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input bg-full-transparent", placeholder: "Password Confirmation", id: "password-confirmation-field", data: { toggle_password_target: "password", 
+                        "password-match-target": "passwordConfirmation", 
+                        "action": "input->password-match#check" } %>
+            <span class="icon is-small is-left">
+              <i class="fa fa-lock"></i>
+            </span>
+            <span class="icon is-small is-right" style="pointer-events: all; cursor: pointer" data-action="click->toggle-password#toggle">
+              <i class="fa fa-fw fa-eye" data-toggle-password-target="icon"></i>
+            </span>
+          </div>
         </div>
       </div>
       <div class="field">
