--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -59,9 +59,8 @@
           Term and Condition
         </label>
       </div>
-      <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
-      <% site_key = Rails.application.credentials.dig(:hcaptcha, :site_key) %>
-      <div class="h-captcha" data-sitekey="<%= site_key %>" data-theme="dark" data-size="compact"></div>
+      <div class="g-recaptcha" data-sitekey="<%= Rails.application.credentials.dig(:recaptcha, :site_key) %>"></div>
+      <script src="https://www.google.com/recaptcha/api.js" async defer></script>
       <div class="field">
         <div class="control">
           <%= f.submit "Sign Up", class: "button is-fullwidth bg-transparent" %>
