--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -53,13 +53,13 @@
           </div>
         </div>
       </div>
-      <div class="field">
+      <div class="field ml-2 mt-2">
         <label class="checkbox">
           <input type="checkbox" />
           Term and Condition
         </label>
       </div>
-      <div class="g-recaptcha" data-sitekey="<%= Rails.application.credentials.dig(:recaptcha, :site_key) %>"></div>
+      <div class="g-recaptcha" data-theme="dark" data-sitekey="<%= Rails.application.credentials.dig(:recaptcha, :site_key) %>"></div>
       <script src="https://www.google.com/recaptcha/api.js" async defer></script>
       <div class="field">
         <div class="control">
