--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -123,7 +123,7 @@
             <div class="navbar-item">
               <div class="buttons">
                 <a href="<%= new_user_registration_path %>" class="button bg-transparent">
-                  <strong>Register</strong>
+                  <strong>Sign up</strong>
                 </a>
                 <a href="<%= new_user_session_path %>" class="button bg-transparent">
                   <strong>Log in</strong>
