adjusment color views (button, link_to, etc)

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
       <div class="section-title has-text-white">
         Announcement
         <% if current_user&.admin? %>
-          <button id="edit-btn" class="button is-small" onclick="toggleEdit()">Edit</button>
+          <button id="edit-btn" class=" bg-full-transparent button is-small" onclick="toggleEdit()">Edit</button>
         <% end %>
       </div>
       <article id="announcement-box" class="message">
