--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -136,7 +136,7 @@
     </nav>
     <% if notice.present? %>
       <div class="notification-container" data-controller="notification" data-notification-timeout-value="3000">
-        <div class="notification bg-transparent">
+        <div class="notification bg-semi-transparent">
           <div class="columns is-mobile is-vcentered">
             <div class="column is-narrow">
               <span class="icon">
