--- a/app/views/mangas/edit.html.erb
+++ b/app/views/mangas/edit.html.erb
@@ -89,7 +89,7 @@
         </div>
       </div>
       <div class="manga-links">
-        <%= link_to "Back to Manga", @manga, class: "button bg-tansparent" %>
+        <%= link_to "Back to Manga", @manga, class: "button bg-transparent" %>
       </div>
     </div>
   </div>
