--- a/app/views/mangas/genres.html.erb
+++ b/app/views/mangas/genres.html.erb
@@ -19,7 +19,7 @@
                 confirm_message_value: "This will permanently remove the genre.",
                 confirm_confirm_text_value: "Yes, delete it!"
               }, 
-                  class: "button is-small" %>
+                  class: "button bg-full-transparent is-small" %>
             <% end %>
           </div>
         </div>
