--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -60,6 +60,77 @@ body {
   );
 }
 
+a {
+  color: white !important;
+}
+
+a:hover,
+a:focus {
+  color: #ddd !important; 
+}
+
+p,
+p strong,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: white !important;
+}
+
+
+.button {
+  color: white !important;
+  border-color: white !important;
+}
+
+.button:hover {
+  color: rgba(255, 255, 255, 0.404) !important;
+  border-color: rgba(255, 255, 255, 0.404) !important;
+}
+
+strong {
+  color: white !important;
+}
+
+input,
+textarea {
+  color: white !important;
+  border-color: white !important;
+}
+
+input:focus,
+textarea:focus {
+  outline: none !important;    
+  box-shadow: none !important; 
+  border-color: white !important; 
+}
+
+input::placeholder,
+textarea::placeholder {
+  color: white !important;
+  opacity: 0.3;
+}
+
+input:hover,
+textarea:hover {
+  border-color: rgba(255, 255, 255, 0.404) !important;
+}
+
+.control .icon i {
+  color: white !important;
+}
+
+.notification .icon i {
+  color: white !important;
+}
+
+* {
+  color: white !important;
+}
+
 .bg-transparent {
   background-color: rgba(0, 0, 0, 0.36);
 }
