added rss feed for latest managa update

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -157,6 +157,9 @@
     <!-- Footer -->
     <footer class="footer bg-transparent">
       <div class="content has-text-centered">
+        <p>
+          <%= link_to "Rss Feed", feed_path %> | <%= link_to "Home", root_path %>
+        </p>
         <p> &copy; <%= Time.now.year %> KitsuManga</p>
         <p>
           <strong>Code</strong> by <a href="https://github.com/whdzera">whdzera</a>.
