configuration devise-jwt : for auth rest APIs

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -107,6 +107,12 @@
                     </span>
                     <strong>Manga Manage</strong>
                   </a>
+                  <a class="navbar-item" href="<%= admin_apimanagement_path %>">
+                    <span class="icon">
+                      <i class="fas fa-flask"></i>
+                    </span>
+                    <strong>API Manage</strong>
+                  </a>
                   <a class="navbar-item" href="<%= admin_reports_path %>">
                     <span class="icon">
                       <i class="fas fa-chart-bar"></i>
